--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,4 +14,4 @@ EMAIL_FROM=noreply@craftsandhands.lt
 STRIPE_WEBHOOK_SECRET=whsec_your_secret
 
 # Frontend URL (for CORS)
-FRONTEND_URL=https://craftsandhands.lt
+FRONTEND_URL=https://craftsandhands.com
